# agentstack

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS_AUDIT.md  DOCS_REMEDIATION_PLAN.md  DX_AUDIT.md  README.md  RELEASING.md  SECURITY.md  STRATEGY.md  TODO.md  action.yml  agentstack-PLAN.md  agentstack.toml  clippy.toml  install.sh  mcp-capability-layer-article.html
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: claude-code.yaml  claude-desktop.yaml  codex.yaml  copilot-cli.yaml  cursor.yaml  gemini.yaml  junie.yaml  kiro.yaml  opencode.yaml  pi.yaml  windsurf.yaml
agentstack-test/: .gitignore  README.md  as  conformance-smoke.sh  demo-central-library.sh  demo-closed-loop.sh  demo-firstrun.sh  demo-firstrun.tape  demo-lockdown.sh  make-docs-sidebar.py  make-term-svgs.py
catalog/: catalog.yaml
crates/adapters/: Cargo.toml  build.rs
crates/adapters/descriptors/: antigravity.yaml  claude-code.yaml  codex.yaml  copilot-cli.yaml  opencode.yaml  vscode.yaml
crates/adapters/src/: descriptor.rs  import.rs  lib.rs  registry.rs  render.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/adapters/: codex.yaml  cursor.yaml
crates/cli/catalog/: catalog.yaml
crates/cli/catalog/instructions/agentstack/: rules.md
crates/cli/catalog/instructions/linear/: rules.md
crates/cli/catalog/skills/adversarial-review/: SKILL.md
crates/cli/catalog/skills/analyze-usage/: SKILL.md
crates/cli/catalog/skills/cloudflare/wrangler-cheatsheet/: SKILL.md
crates/cli/catalog/skills/finding-skills/: SKILL.md
crates/cli/catalog/skills/mine-skills/: SKILL.md
crates/cli/catalog/skills/orchestrate-workflow/: SKILL.md
crates/cli/catalog/skills/posthog/experiment/: SKILL.md
crates/cli/catalog/skills/pr-triage/: SKILL.md
crates/cli/catalog/skills/propose-workflow/: SKILL.md
crates/cli/catalog/skills/route-by-cost/: SKILL.md
crates/cli/catalog/skills/run-codex/: SKILL.md
crates/cli/catalog/skills/using-agentstack/: SKILL.md
crates/cli/src/: catalog.rs  cli.rs  consolidate.rs  executable.rs  execution.rs  footprint.rs  gateway.rs  gateway_http.rs  gitx.rs  grant.rs  guard.rs  harness.rs  history.rs  lib.rs  library.rs  machine_policy.rs  main.rs  mcp.rs  mcp_server.rs  pi_packages.rs  plugin_recipes.rs  plugins.rs  proxy.rs  resolve.rs  runs.rs  scan.rs  session.rs  snapshot.rs  state.rs  store.rs  sys.rs  text.rs  ui_contract.rs  usage.rs  verify.rs  workflows.rs
crates/cli/src/adapter/: descriptor.rs  mod.rs
crates/cli/src/codemode/: endpoint.rs  mod.rs
crates/cli/src/commands/: adapters.rs  add.rs  adopt.rs  analyze.rs  apply.rs  audit.rs  bootstrap.rs  connect.rs  consolidate.rs  diff.rs  doctor.rs  explain.rs  guard.rs  init.rs  install.rs  instructions.rs  lib.rs  lock.rs  locked.rs  mod.rs  optimize.rs  overview.rs  pack.rs  panel_edit.rs  plugins.rs  proxy.rs  remove.rs  report.rs  restore.rs  runs.rs  sandbox.rs  search.rs  secret.rs  self_cmd.rs  session.rs  settings.rs  setup.rs  shim.rs  stats.rs  trust.rs  (+6 more)
crates/cli/src/dashboard/: actions.rs  mod.rs  server.rs  snapshot.rs
crates/cli/src/dashboard/assets/: app.js  styles.css
crates/cli/src/manifest/: mod.rs  validate.rs
crates/cli/src/provider/: discover.rs  gitpack.rs  mod.rs  registry.rs  source.rs
crates/cli/src/render/: apply.rs  extensions.rs  hooks.rs  instructions.rs  merge_json.rs  merge_toml.rs  mod.rs  owned.rs  skills.rs
crates/cli/src/secret/: env_file.rs  keychain.rs  mod.rs  varlock.rs
crates/cli/src/util/: atomic.rs  fsx.rs  mod.rs
crates/cli/tests/: add_skill.rs  apply_instructions.rs  apply_partial_failure.rs  audit.rs  central_servers.rs  cli_surface.rs  codemode.rs  codex_project.rs  consolidate.rs  content_pinning.rs  cross_manifest_prune.rs  default_profile.rs  default_scope.rs  docs_commands.rs  doctor_broken_links.rs  doctor_ci_gate.rs  doctor_drift_hints.rs  doctor_profile_skills.rs  doctor_progressive.rs  explain.rs  gateway_stdio.rs  git_packs.rs  gitignore_lifecycle.rs  golden.rs  hooks.rs  init_global.rs  init_restore_onboarding.rs  init_review.rs  install_profiles.rs  integration.rs  interactive_confirm.rs  lib_sync.rs  mcp_lease.rs  ordinary_journey_vocab.rs  owned_servers.rs  policy_dimensions.rs  policy_presets.rs  proxy.rs  restore_history.rs  runs.rs  (+18 more)
crates/cli/tests/snapshots/: golden__claude_desktop_render.snap  golden__codex_render.snap  golden__copilot_cli_render.snap  golden__opencode_render.snap  golden__vscode_render.snap
crates/core/: Cargo.toml
crates/core/src/: digest.rs  lib.rs  lock.rs  refs.rs  scope.rs  secret.rs
crates/core/src/manifest/: load.rs  mod.rs  model.rs
crates/core/src/util/: atomic.rs  confirm.rs  diff.rs  fsx.rs  mod.rs  paths.rs
crates/egress/: Cargo.toml
crates/egress/src/: blocking.rs  bridge.rs  connect.rs  decide.rs  execution_relay.rs  lib.rs  netguard.rs  proxy.rs  relay.rs  sni.rs  spool.rs
crates/egress/tests/: sidecar_image.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: compile.rs  lib.rs  ruleset.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: docker.rs  lib.rs  lockdown.rs  orchestrate.rs  sandbox.rs  spec.rs
crates/runtime/tests/: docker.rs
crates/trust/: Cargo.toml
crates/trust/src/: lib.rs  sign.rs
crates/workflow/: Cargo.toml  deps.snapshot
crates/workflow/src/: bridge.rs  error.rs  lib.rs  meta.rs  prelude.js
docker/: egress-proxy.Dockerfile  sandbox.Dockerfile
docs/: ARCHITECTURE.md  ENFORCEMENT.md  HISTORY.md  PLAN-TOOLS-EXECUTE.md  ROADMAP.md  architecture.html  central-library-guide.html  choose.html  choose.md  competitive-landscape.md  concepts.html  concepts.md  cookbook.html  dashboard.md  docs.html  enforcement.html  examples.html  history.html  how-it-works.html  index.html  index.md  integrations.html  integrations.md  library.html  mcp-capability-layer.html  plan.html  primitives.html  reference.html  reference.md  sitemap.xml  start.html  (+6 more)
(+338 files in other folders)
