[package]
name = "agentstack-adapters"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
description = "agentstack adapters: data-driven bundle -> per-CLI config compilers (13 CLIs)"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
agentstack-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
anyhow = "1"
include_dir = "0.7"

[dev-dependencies]
assert_fs = "1"

[lints]
workspace = true
