[package]
name = "agentstack"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
description = "One portable manifest, every agent CLI. Manage MCP servers + skills across Claude Code, Codex, and more."
license.workspace = true
repository.workspace = true
homepage = "https://github.com/Tarekkharsa/agentstack"
readme = "../../README.md"
keywords = ["mcp", "cli", "claude", "codex", "agents"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/tests/snapshots"]

[[bin]]
name = "agentstack"
path = "src/main.rs"

[features]
# Compile the Docker sandbox backend + the egress proxy into `agentstack run
# --sandbox`. Off by default (keeps bollard + tokio out of standard builds and
# CI); a maintainer with Docker builds `cargo build --features sandbox`.
sandbox = ["agentstack-runtime/docker", "dep:agentstack-egress"]

[dependencies]
agentstack-core = { path = "../core" }
agentstack-trust = { path = "../trust" }
agentstack-policy = { path = "../policy" }
agentstack-adapters = { path = "../adapters" }
agentstack-recorder = { path = "../recorder" }
# Default: the runtime's backend-agnostic core (spec building, orchestration),
# no bollard. The `sandbox` feature turns on the Docker backend so
# `agentstack run --sandbox` can actually launch a container.
agentstack-runtime = { path = "../runtime", default-features = false }
agentstack-executor = { path = "../executor" }
# The governed workflow engine (Boa) — a self-contained domain crate; the CLI
# composes it with the locked-run spawner (design doc §12.4 Stage C).
agentstack-workflow = { path = "../workflow" }
# The egress proxy — pulled in only with the `sandbox` feature (it brings
# tokio); the default cli build doesn't compile it.
agentstack-egress = { path = "../egress", optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.2"
toml = { version = "0.8", features = ["preserve_order"] }
toml_edit = "0.22"
serde_yaml = "0.9"
include_dir = "0.7"
indexmap = { version = "2", features = ["serde"] }
keyring = "2"
rpassword = "7"
# Arrow-key Select prompts for the interactive wizard (mode fork + secret
# store). cli crate only — nowhere near trust/policy. default-features off:
# we only use Select + ColorfulTheme, not the editor/password extras. Reuses
# the `console` crate already in the tree.
dialoguer = { version = "0.12", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
age = "0.10"
tiny_http = "0.12"
dirs = "5"
anyhow = "1"
thiserror = "1"
regex = "1"
owo-colors = "4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
assert_fs = "1"
tempfile = "3"
# Witness for the name-contract path-safety invariant (maintainer-approved
# 2026-07-20; already blessed for trust/policy). Dev-only.
proptest = "1"
# For the Docker-gated sandbox-egress integration test (feature `sandbox`).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }

[lints]
workspace = true
