[package]
name = "agentstack-core"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
description = "agentstack bundle format: manifest + lockfile parsing, content digests"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# TODO(phase-1): drop clap from core — Scope/ServerType derive ValueEnum today.
# The orphan-rule-safe fix: a cli-local arg enum implementing ValueEnum, with
# From<CliX> for the core type. core parses hostile input; thinnest deps win.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
sha2 = "0.10"
dirs = "5"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
owo-colors = "4"

[dev-dependencies]
assert_fs = "1"
proptest = "1"
tempfile = "3"

[lints]
workspace = true
