[package]
name = "agentstack-egress"
version = "0.15.0"
edition.workspace = true
rust-version.workspace = true
description = "agentstack egress proxy enforcement: CONNECT/SNI parsing + per-host policy decisions (Phase 2)"
license.workspace = true
repository.workspace = true
publish = false

# The egress enforcement crate: the pure decision core (CONNECT/SNI parsing +
# per-host policy decisions) AND the async forward-proxy server that applies
# it to real sockets. rule 6 confines tokio to this crate. The proxy server is
# testable on loopback (a client sends CONNECT, the proxy consults the guard,
# tunnels or refuses) — no Docker needed; wiring a *container* to route through
# it is the runtime's job.
# The sidecar binary this crate ships (packaged into the proxy container
# image by docker/egress-proxy.Dockerfile).
[[bin]]
name = "agentstack-egress-proxy"
path = "src/bin/egress_proxy.rs"

[dependencies]
agentstack-core = { path = "../core" }
agentstack-policy = { path = "../policy" }
agentstack-recorder = { path = "../recorder" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
# For the sidecar binary: deserialize the ruleset handed across the process
# boundary; emit RunEvent JSONL on stdout (maintainer-approved, rule 6).
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }

[lints]
workspace = true
