[package]
name = "agentstack-executor"
version = "0.10.1"
edition = "2021"
rust-version = "1.80"
description = "Governed ephemeral code-execution domain for agentstack"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tarekkharsa/agentstack"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
proptest = "1"
