[package]
name = "agentstack-executor"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
description = "Governed ephemeral code-execution domain for agentstack"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
