[package]
name = "agentstack-policy"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
description = "agentstack policy engine: machine ∩ bundle composition, the seed of the intersection engine"
license.workspace = true
repository.workspace = true
publish = false

# rule 6: this crate is on the strict dependency list — serde, serde_json,
# and indexmap are all on it (the compiled ruleset is the serialized wire
# contract for Phase-2 enforcers; indexmap mirrors the manifest policy maps).
[dependencies]
agentstack-core = { path = "../core" }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
