[package]
name = "agentstack-recorder"
version = "0.8.1"
edition = "2021"
rust-version = "1.80"
description = "agentstack append-only run/call log: event types, digest-keyed audit records"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tarekkharsa/agentstack"
publish = false

[dependencies]
agentstack-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"

[dev-dependencies]
assert_fs = "1"
