[package]
name = "agentstack-recorder"
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
description = "agentstack append-only run/call log: event types, digest-keyed audit records"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
agentstack-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"

[dev-dependencies]
assert_fs = "1"

[lints]
workspace = true
