[package]
name = "agentstack-runtime"
version = "0.8.1"
edition = "2021"
rust-version = "1.80"
description = "agentstack sandbox runtime: container lifecycle (Phase 2)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tarekkharsa/agentstack"
publish = false

# The Docker backend (bollard + the tokio it drives) is OPT-IN, not default.
# Rationale: it is compile-verified but not yet behavior-verified against a
# real daemon, so it stays out of the default workspace build + CI (which have
# no Docker) until validated. The backend-agnostic core is always built and
# fully tested. Enable with `--features docker` to compile the bollard backend;
# `agentstack run --sandbox` requires it.
[features]
default = []
docker = ["dep:bollard", "dep:tokio", "dep:futures-util"]

[dependencies]
agentstack-core = { path = "../core" }
agentstack-policy = { path = "../policy" }
agentstack-recorder = { path = "../recorder" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
# rule 6: bollard (and the tokio it drives) are confined to THIS crate.
# The Docker daemon API is async; the backend holds its own runtime and
# block_on's each call, so the Sandbox trait and everything above it stay
# synchronous. The runtime is multi-thread because lockdown mode follows the
# sidecar's logs on a spawned task that must run WHILE this thread blocks on
# the sandbox container — async/tokio proper is still the egress crate (2.2).
bollard = { version = "0.21", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
futures-util = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
assert_fs = "1"
