[package]
name = "agentstack-trust"
version = "0.9.0"
edition = "2021"
rust-version = "1.80"
description = "agentstack trust store: digest pinning, re-gating, review states"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tarekkharsa/agentstack"
publish = false

# rule 6: this crate is reviewed line by line, so its dependency list is the
# strict one and nothing else: serde, serde_json, sha2, ed25519-dalek,
# thiserror, indexmap (deterministic ordering is digest-relevant), proptest
# (dev). The 2026-07-11 sweep dropped anyhow (→ thiserror) and toml (store
# migrated from trust.toml to trust.json).
[dependencies]
agentstack-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
# rule 6: ed25519-dalek is on this crate's blessed list — detached lockfile
# signatures for registry distribution (Phase 4). from_bytes/sign/verify only;
# no RNG dependency (seeds come from core::util::random_bytes).
ed25519-dalek = "2"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
assert_fs = "1"
proptest = "1"
